# LogAgent

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  codebase_context.py  event_driven_agent.py  logagent_cli.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  splunk_rca_agent.py
tests/: conftest.py  test_agent_classes.py  test_codebase_context.py  test_event_driven.py  test_pipeline.py
