[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "splunk-logagent"
version         = "1.0.0"
description     = "Splunk anomaly monitor: Drain clustering + LLM RCA + HTML email report"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
keywords        = ["splunk", "log-analysis", "rca", "llm", "observability", "sre"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "urllib3>=2.0.0",
]

[project.scripts]
logagent = "logagent_cli:main"

[project.urls]
Repository = "https://github.com/vishwas98/LogAgent"
Issues     = "https://github.com/vishwas98/LogAgent/issues"

[tool.setuptools]
# Include all .py files in the repo root as installable modules
py-modules = [
    "logagent_cli",
    "splunk_rca_agent",
    "codebase_context",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false
line-ending              = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function call in default args
]

[tool.ruff.lint.isort]
known-first-party = ["splunk_rca_agent", "codebase_context", "logagent_cli"]
